exports[`<SettingsMenu /> snapshot tests matches snapshot of when user can delete snippet 1`] = `
<IconMenu
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "top",
    }
  }
  animated={true}
  iconButtonElement={
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      tooltipPosition="bottom-center"
      touch={false}>
      <ActionSettings />
    </IconButton>
  }
  multiple={false}
  onItemTouchTap={[Function]}
  onKeyboardFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onRequestChange={[Function]}
  onTouchTap={[Function]}
  open={null}
  targetOrigin={
    Object {
      "horizontal": "left",
      "vertical": "top",
    }
  }
  touchTapCloseDelay={200}
  useLayerForClickAway={false}>
  <ThemePicker
    codeMirrorTheme="codesplain"
    onChange={[Function]} />
  <KeymapPicker
    onChange={[Function]}
    selectedKeymap="default" />
  <DeleteMenu
    onDeleteClick={[Function]} />
</IconMenu>
`;

exports[`<SettingsMenu /> snapshot tests matches snapshot of when user cannot delete snippet 1`] = `
<IconMenu
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "top",
    }
  }
  animated={true}
  iconButtonElement={
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      tooltipPosition="bottom-center"
      touch={false}>
      <ActionSettings />
    </IconButton>
  }
  multiple={false}
  onItemTouchTap={[Function]}
  onKeyboardFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onRequestChange={[Function]}
  onTouchTap={[Function]}
  open={null}
  targetOrigin={
    Object {
      "horizontal": "left",
      "vertical": "top",
    }
  }
  touchTapCloseDelay={200}
  useLayerForClickAway={false}>
  <ThemePicker
    codeMirrorTheme="codesplain"
    onChange={[Function]} />
  <KeymapPicker
    onChange={[Function]}
    selectedKeymap="default" />
</IconMenu>
`;
